add test on browserlayer

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,8 +4,14 @@ extends =
 package-name = collective.linguaanalytics
 package-extras = [tests]
 
-parts+=omelette
+parts+=omelette testxml
 
 [omelette]
 recipe=collective.recipe.omelette
 eggs=${instance:eggs}
+
+[testxml]
+recipe = collective.xmltestreport
+eggs = 
+    ${test:eggs}
+defaults = ['--auto-color', '--auto-progress', '--xml', '-s', '${buildout:package-name}']
