make buildout use my extends to add testxml parts

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,17 +1,12 @@
 [buildout]
 extends =
     http://svn.plone.org/svn/collective/buildout/plonetest/test-4.1.x.cfg
+    https://github.com/toutpt/mypythontools/raw/master/test-xml.cfg
 package-name = collective.linguaanalytics
 package-extras = [tests]
 
-parts+=omelette testxml
+parts+=omelette
 
 [omelette]
 recipe=collective.recipe.omelette
 eggs=${instance:eggs}
-
-[testxml]
-recipe = collective.xmltestreport
-eggs = 
-    ${test:eggs}
-defaults = ['--auto-color', '--auto-progress', '--xml', '-s', '${buildout:package-name}']
